# RPC

./: CMakeLists.txt  run
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockQueue.h  logger.h  mcrpcapplication.h  mcrpcchannel.h  mcrpccontroller.h  mcrpcheader.pb.h  mcrpcprovide.h
src/: CMakeLists.txt  logger.cc  mcrpcapplication.cc  mcrpcchannel.cc  mcrpcconfig.cc  mcrpccontroller.cc  mcrpcheader.pb.cc  mcrpcheader.proto  mcrpcprovide.cc  zookeeperutil.cc
src/include/: mcrpcconfig.h  zookeeperutil.h
test/: CMakeLists.txt  a.out  main.cpp
